# whisk

./: README.md  target-words.ts
backend/: .env  .env.example  .gitignore  APIFY_INTEGRATION.md  MIGRATION_README.md  QUICK_START.md  README.md  SCHEMA_UPDATE_SUMMARY.md  VENV_SETUP.md  bot.py  daily_api.py  main.py  migrate_schema.py  pyproject.toml  requirements.txt  rotating-residential-proxy.md  run.py
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/api/endpoints/: chat.py  llm.py  video_analysis.py  video_analysis_curl_test.bash  videos.py  vocab_extract.py  vocab_live_chat.py
backend/app/core/: config.py  exceptions.py  logger.py  middleware.py  prompt.py  prompts.py
backend/app/db/: __init__.py  repositories.py
backend/app/schemas/: .gitkeep  __init__.py  gemini_schemas.py  video.py  video_schema.py  vocab.py
backend/app/services/: chunker.py  daily.py  gemini.py  gemini_live_chat.py  youtube.py  youtubeAPI.py
backend/data/: vocab.db
backend/tests/: db_endpoints_test.bash  demo_format_transcript.py  sample-video-data.json  sample_apify_output.json  test_apify_transcript.py  video_analysis_curl.bash  video_analysis_curl_test.bash
frontend/: .env.example  NAVIGATION.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: page.tsx
frontend/app/api/gemini-key/: route.ts
frontend/components/: LiveChat.tsx
frontend/hooks/: useGeminiLive.ts
frontend/src/app/: globals.css  layout.tsx  route-structure.txt
frontend/src/app/chat/: page.tsx
frontend/src/lib/: store.ts
react/src/app/: page.tsx
(+54 files in other folders)
