[project]
name = "simple-chatbot"
version = "0.1.0"
description = "Simple chatbot built with Pipecat and FastAPI"
requires-python = ">=3.10"
dependencies = [
    "apify-client>=1.7.0",
    "fastapi>=0.109.0",
    "httpx>=0.26.0",
    "loguru>=0.7.0",
    "pillow>=10.0.0",
    "pipecat-ai[daily,google,local-smart-turn-v3,runner,silero]>=0.0.101",
    "pydantic>=2.11.10",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.27.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
